--- a/docker/prometheus-exporter/dockerfile
+++ b/docker/prometheus-exporter/dockerfile
@@ -1,2 +1,8 @@
 FROM prom/cloudwatch-exporter
 ADD config.yml /config/
+
+ENV PRODUCT_NAME = "Dove"
+ENV ENVIRONMENT_NAME = "dev"
+ENV PROJECT_NAME ="podcast-context"
+
+
