--- a/docker/prometheus-exporter/config.yml
+++ b/docker/prometheus-exporter/config.yml
@@ -4,77 +4,71 @@ metrics:
   - FunctionName
   - Resource
   aws_dimension_select:
-     FunctionName: ["*"]
+     FunctionName: ["podcast-context-PostToODCLambda-prod"]
      aws_statistics: [Sum]
   # aws_dimension_select_regex:
   aws_metric_name: Invocations
   aws_namespace: AWS/Lambda
   aws_statistics:
   - Sum
-  # aws_tag_select:
-  #    tag_selections:
-  #      Project: ${PROJECT_NAME}
-  #      Environment: ${ENVIRONMENT_NAME}
-  #      Product: ${PRODUCT_NAME}
-  #    resource_type_selection: "function"
-  #    resource_id_dimension: LoadBalancerName:${ENVIRONMENT_NAME}
+  
 
-# - aws_dimensions:
-#   - FunctionName
-#   - Resource
-#   aws_metric_name: Errors
-#   aws_namespace: AWS/Lambda
-#   aws_statistics:
-#   - Sum
+- aws_dimensions:
+  - FunctionName
+  - Resource
+  aws_metric_name: Errors
+  aws_namespace: AWS/Lambda
+  aws_statistics:
+  - Sum
 
-# - aws_dimensions:
-#   - FunctionName
-#   - Resource
-#   aws_metric_name: Duration
-#   aws_namespace: AWS/Lambda
-#   aws_statistics:
-#   - Average
+- aws_dimensions:
+  - FunctionName
+  - Resource
+  aws_metric_name: Duration
+  aws_namespace: AWS/Lambda
+  aws_statistics:
+  - Average
 
   
-# - aws_dimensions:
-#   - FunctionName
-#   - Resource
-#   aws_metric_name: Duration
-#   aws_namespace: AWS/Lambda
-#   aws_statistics:
-#   - Maximum
+- aws_dimensions:
+  - FunctionName
+  - Resource
+  aws_metric_name: Duration
+  aws_namespace: AWS/Lambda
+  aws_statistics:
+  - Maximum
 
-# - aws_dimensions:
-#   - FunctionName
-#   - Resource
-#   aws_metric_name: Duration
-#   aws_namespace: AWS/Lambda
-#   aws_statistics:
-#   - Minimum
+- aws_dimensions:
+  - FunctionName
+  - Resource
+  aws_metric_name: Duration
+  aws_namespace: AWS/Lambda
+  aws_statistics:
+  - Minimum
 
-# - aws_dimensions:
-#   - FunctionName
-#   - Resource
-#   aws_metric_name: Throttles
-#   aws_namespace: AWS/Lambda
-#   aws_statistics:
-#   - Sum
+- aws_dimensions:
+  - FunctionName
+  - Resource
+  aws_metric_name: Throttles
+  aws_namespace: AWS/Lambda
+  aws_statistics:
+  - Sum
 
-# - aws_dimensions:
-#   - FunctionName
-#   - Resource
-#   aws_metric_name: ConcurrentExecutions
-#   aws_namespace: AWS/Lambda
-#   aws_statistics:
-#   - Sum
+- aws_dimensions:
+  - FunctionName
+  - Resource
+  aws_metric_name: ConcurrentExecutions
+  aws_namespace: AWS/Lambda
+  aws_statistics:
+  - Sum
 
-# - aws_dimensions:
-#   - FunctionName
-#   - Resource
-#   aws_metric_name: UnreservedConcurrentExecutions
-#   aws_namespace: AWS/Lambda
-#   aws_statistics:
-#   - Sum
+- aws_dimensions:
+  - FunctionName
+  - Resource
+  aws_metric_name: UnreservedConcurrentExecutions
+  aws_namespace: AWS/Lambda
+  aws_statistics:
+  - Sum
 
 # - aws_dimensions:
 #   - TableName
