--- a/docker/jenkinsfile
+++ b/docker/jenkinsfile
@@ -16,21 +16,13 @@ pipeline {
         sh 'cd ${BUILD_PATH} && docker build -t ${DOCKER_BUILD_TAG} .'}
       }
     }
-
-    stage('push image') {
-      agent {
-        node {
-          label 'spot-agents'
+    stage('Push container'){
+        steps {
+          sh 'aws ecr get-login-password --region ${REGION} | docker login --username AWS --password-stdin 997475656115.dkr.ecr.eu-west-2.amazonaws.com'
+          sh 'docker tag ${DOCKER_BUILD_TAG}:latest ${ECR_REPO}:latest'
+          sh 'docker push ${ECR_REPO}:latest'
         }
-
-      }
-
-      steps {
-        sh 'aws ecr get-login-password --region ${REGION} | docker login --username AWS --password-stdin 997475656115.dkr.ecr.eu-west-2.amazonaws.com'
-        sh 'docker tag ${DOCKER_BUILD_TAG}:latest ${ECR_REPO}:latest'
-        sh 'docker push ${ECR_REPO}:latest'
       }
     }
 
 
-  }
