--- a/docker/prometheus-exporter/config.yml
+++ b/docker/prometheus-exporter/config.yml
@@ -16,6 +16,9 @@ metrics:
 - aws_dimensions:
   - FunctionName
   - Resource
+  aws_dimension_select:
+     FunctionName: ["podcast-context-PostToODCLambda-prod"]
+     aws_statistics: [Sum]
   aws_metric_name: Errors
   aws_namespace: AWS/Lambda
   aws_statistics:
@@ -24,6 +27,9 @@ metrics:
 - aws_dimensions:
   - FunctionName
   - Resource
+  aws_dimension_select:
+     FunctionName: ["podcast-context-PostToODCLambda-prod"]
+     aws_statistics: [Sum]
   aws_metric_name: Duration
   aws_namespace: AWS/Lambda
   aws_statistics:
@@ -33,6 +39,9 @@ metrics:
 - aws_dimensions:
   - FunctionName
   - Resource
+  aws_dimension_select:
+     FunctionName: ["podcast-context-PostToODCLambda-prod"]
+     aws_statistics: [Sum]
   aws_metric_name: Duration
   aws_namespace: AWS/Lambda
   aws_statistics:
@@ -41,6 +50,9 @@ metrics:
 - aws_dimensions:
   - FunctionName
   - Resource
+  aws_dimension_select:
+     FunctionName: ["podcast-context-PostToODCLambda-prod"]
+     aws_statistics: [Sum]
   aws_metric_name: Duration
   aws_namespace: AWS/Lambda
   aws_statistics:
@@ -49,6 +61,9 @@ metrics:
 - aws_dimensions:
   - FunctionName
   - Resource
+  aws_dimension_select:
+     FunctionName: ["podcast-context-PostToODCLambda-prod"]
+     aws_statistics: [Sum]
   aws_metric_name: Throttles
   aws_namespace: AWS/Lambda
   aws_statistics:
@@ -57,6 +72,9 @@ metrics:
 - aws_dimensions:
   - FunctionName
   - Resource
+  aws_dimension_select:
+     FunctionName: ["podcast-context-PostToODCLambda-prod"]
+     aws_statistics: [Sum]
   aws_metric_name: ConcurrentExecutions
   aws_namespace: AWS/Lambda
   aws_statistics:
@@ -65,6 +83,9 @@ metrics:
 - aws_dimensions:
   - FunctionName
   - Resource
+  aws_dimension_select:
+     FunctionName: ["podcast-context-PostToODCLambda-prod"]
+     aws_statistics: [Sum]
   aws_metric_name: UnreservedConcurrentExecutions
   aws_namespace: AWS/Lambda
   aws_statistics:
