--- a/docker/prometheus-exporter/config.yml
+++ b/docker/prometheus-exporter/config.yml
@@ -3,147 +3,81 @@ metrics:
 - aws_dimensions:
   - FunctionName
   - Resource
-  aws_dimension_select:
-     FunctionName: ["podcast-context-PostToODCLambda-prod"]
- 
-  # aws_dimension_select_regex:
+  aws_metric_name: Sending context data to DAX
+  aws_namespace: AWS/Lambda
+  aws_statistics:
+  - Sum
+
+- aws_dimensions:
+  - FunctionName
+  - Resource
+  aws_metric_name: Podcast episodes processed
+  aws_namespace: AWS/Lambda
+  aws_statistics:
+  - Sum  
+
+- aws_dimensions:
+  - FunctionName
+  - Resource
+  aws_metric_name: Files sent to Oracle
+  aws_namespace: AWS/Lambda
+  aws_statistics:
+  - Sum  
+
+
+- aws_dimensions:
+  - FunctionName
+  - Resource
   aws_metric_name: Invocations
   aws_namespace: AWS/Lambda
   aws_statistics:
   - Sum
-  
-
 - aws_dimensions:
   - FunctionName
   - Resource
-  aws_dimension_select:
-     FunctionName: ["podcast-context-PostToODCLambda-prod"]
-
   aws_metric_name: Errors
   aws_namespace: AWS/Lambda
   aws_statistics:
   - Sum
-
 - aws_dimensions:
   - FunctionName
   - Resource
-  aws_dimension_select:
-     FunctionName: ["podcast-context-PostToODCLambda-prod"]
-
   aws_metric_name: Duration
   aws_namespace: AWS/Lambda
   aws_statistics:
   - Average
-
-  
 - aws_dimensions:
   - FunctionName
   - Resource
-  aws_dimension_select:
-     FunctionName: ["podcast-context-PostToODCLambda-prod"]
-
   aws_metric_name: Duration
   aws_namespace: AWS/Lambda
   aws_statistics:
   - Maximum
-
 - aws_dimensions:
   - FunctionName
   - Resource
-  aws_dimension_select:
-     FunctionName: ["podcast-context-PostToODCLambda-prod"]
-
   aws_metric_name: Duration
   aws_namespace: AWS/Lambda
   aws_statistics:
   - Minimum
-
 - aws_dimensions:
   - FunctionName
   - Resource
-  aws_dimension_select:
-     FunctionName: ["podcast-context-PostToODCLambda-prod"]
-
   aws_metric_name: Throttles
   aws_namespace: AWS/Lambda
   aws_statistics:
   - Sum
-
 - aws_dimensions:
   - FunctionName
   - Resource
-  aws_dimension_select:
-     FunctionName: ["podcast-context-PostToODCLambda-prod"]
-
   aws_metric_name: ConcurrentExecutions
   aws_namespace: AWS/Lambda
   aws_statistics:
   - Sum
-
 - aws_dimensions:
   - FunctionName
   - Resource
-  aws_dimension_select:
-     FunctionName: ["podcast-context-PostToODCLambda-prod"]
-
   aws_metric_name: UnreservedConcurrentExecutions
   aws_namespace: AWS/Lambda
   aws_statistics:
   - Sum
-
-# - aws_dimensions:
-#   - TableName
-#   - GlobalSecondaryIndexName
-#   aws_metric_name: ConsumedReadCapacityUnits
-#   aws_namespace: AWS/DynamoDB
-#   aws_statistics:
-#   - Maximum
-
-# - aws_dimensions:
-#   - TableName
-#   - GlobalSecondaryIndexName
-#   aws_metric_name: ConsumedWriteCapacityUnits
-#   aws_namespace: AWS/DynamoDB
-#   aws_statistics:
-#   - Maximum
-
-# - aws_dimensions:
-#   - TableName
-#   - Operation
-#   aws_metric_name: ThrottledRequests
-#   aws_namespace: AWS/DynamoDB
-#   aws_statistics:
-#   - Sum
-
-# - aws_dimensions:
-#   - TableName
-#   - Operation
-#   aws_metric_name: SystemErrors
-#   aws_namespace: AWS/DynamoDB
-#   aws_statistics:
-#   - Sum
-
-# - aws_dimensions:
-#   - TableName
-#   - Operation
-#   aws_metric_name: SuccessfulRequestLatency
-#   aws_namespace: AWS/DynamoDB
-#   aws_statistics:
-#   - Maximum
-
-# - aws_dimensions:
-#   - TableName
-#   - GlobalSecondaryIndexName
-#   aws_metric_name: WriteThrottleEvents
-#   aws_namespace: AWS/DynamoDB
-#   aws_statistics:
-#   - Sum
-
-# - aws_dimensions:
-#   - TableName
-#   - GlobalSecondaryIndexName
-#   aws_metric_name: ReadThrottleEvents
-#   aws_namespace: AWS/DynamoDB
-#   aws_statistics:
-#   - Sum
-
